core/unpackaged/main/default/objects/Contact/fields/Account_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_Text__c</fullName>
    <formula>AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID (Text)</label>
    <type>Text</type>
</CustomField>