core/unpackaged/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>