core/unpackaged/main/default/objects/Contact/fields/Email_Account_Key__c.field-meta.xml
<CustomField>
    <fullName>Email_Account_Key__c</fullName>
    <formula>LOWER( Email ) &amp; "-" &amp; CASESAFEID( AccountId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Account Key</label>
    <type>Text</type>
</CustomField>