core/unpackaged/main/default/objects/Contact/fields/Is_Commerce_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Commerce_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Commerce User</label>
    <type>Checkbox</type>
</CustomField>