core/unpackaged/main/default/objects/Contact/fields/Lead_Conversion_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Lead_Conversion_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field determines if a contact has chosen to opt out of the automated email sent when a lead is converted to an opportunity.</description>
    <inlineHelpText>This field determines if a contact has chosen to opt out of the automated email sent when a lead is converted to an opportunity.</inlineHelpText>
    <label>Lead Conversion Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>