core/unpackaged/main/default/objects/Contact/fields/XA_Integrated__c.field-meta.xml
<CustomField>
    <fullName>XA_Integrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates if contact was successfully sent to XA</description>
    <inlineHelpText>indicates if contact was successfully sent to XA</inlineHelpText>
    <label>XA Integrated</label>
    <type>Checkbox</type>
</CustomField>