core/unpackaged/main/default/objects/Contact/fields/XA_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>XA_Integration_Status__c</fullName>
    <description>integration status received from XA when contact create call was made</description>
    <inlineHelpText>integration status received from XA when contact create call was made</inlineHelpText>
    <label>XA Integration Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>