core/unpackaged/main/default/objects/Contact/listViews/Commerce_Users_List.listView-meta.xml
<ListView>
    <fullName>Commerce_Users_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Commerce_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Commerce Users List</label>
</ListView>