core/unpackaged/main/default/objects/Contact/listViews/ZVC__AllContacts.listView-meta.xml
<ListView>
    <fullName>ZVC__AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>