core/unpackaged/main/default/objects/Contact/listViews/ZVC__MyContacts.listView-meta.xml
<ListView>
    <fullName>ZVC__MyContacts</fullName>
    <filterScope>Mine</filterScope>
    <label>My Contacts</label>
</ListView>