core/unpackaged/main/default/objects/Contact/listViews/ZVC__NewThisWeek.listView-meta.xml
<ListView>
    <fullName>ZVC__NewThisWeek</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>New This Week</label>
</ListView>